--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,19 @@
 @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Oswald:wght@200..700&family=Outfit:wght@100..900&display=swap');
 @import "tailwindcss";
 
+@theme {
+    --animate-infinite-scroll: infinite-scroll 10s linear infinite;
+}
+
+@keyframes infinite-scroll {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(-100%);
+    }
+}
+
 @layer base {
     :root {
         --background: 120 8% 5%;
