--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,24 @@
 
 @theme {
     --animate-infinite-scroll: infinite-scroll 30s linear infinite;
+		--animate-div-cover: div-cover .5s linear;
 }
 
 @keyframes infinite-scroll {
     to {
         left: -700px;
     }
+}
+
+@keyframes div-cover {
+	0% {
+		width: 100%;
+		clip-path: circle(150% at left top);
+	}
+	100% {
+		width: 100%;
+		clip-path: circle(7% at left top);
+	}
 }
 
 
@@ -39,6 +51,10 @@
     max-width: 100%;
     margin: 0 auto;
     padding: 0;
+}
+
+@utility divcover {
+	clip-path: circle(7% at left top);
 }
 
 @utility shade {
