--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Outfit:wght@100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Oswald:wght@200..700&family=Outfit:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&family=Outfit:wght@100..900&family=Pixelify+Sans:wght@400..700&display=swap');
 @import "tailwindcss";
 
 @theme {
@@ -36,7 +35,7 @@
     ::before,
     ::after {
         @apply box-border;
-        font-family: 'Oswald', sans-serif;
+        font-family: "Oswald", sans-serif;
     }
     html {
         @apply text-[hsl(var(--foreground))] bg-[hsl(var(--background))];
