--- a/src/index.css
+++ b/src/index.css
@@ -65,7 +65,7 @@
         @apply scroll-smooth;
     }
     body {
-        @apply bg-[hsl(var(--background))] text-[hsl(var(--foreground))] font-normal text-sm antialiased tracking-widest;
+        @apply bg-[hsl(var(--background))] text-[hsl(var(--foreground))] font-normal text-lg sm:text-2xl antialiased tracking-widest;
     }
 }
 
